sandbox/output
StringCalculator.java:9: error: cannot find symbol
        if(number.startWith("//")){
                 ^
  symbol:   method startWith(String)
  location: variable number of type String
1 error
